--- a/src/app/components/food/food.component.css
+++ b/src/app/components/food/food.component.css
@@ -1,14 +1,8 @@
 .food {
-    height: auto;
     width: 400px;
-    margin: 30px auto;
-    padding: 10px;
-    display: grid;
-    grid-template-columns: auto auto;
 }
 
-.picture {
-    height: 200px;
-    width: 200px;
-    margin: 10px;
+img {
+  height: 100px;
+  width: 200px;
 }
