--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,7 @@
-<div *ngFor="let category of categories">
-  <app-category [category]="category"></app-category>
-</div>
-
-<div *ngIf="!categories || categories.length == 0">Falla</div>
+<body>
+  <div *ngFor="let category of categories">
+    <app-category [category]="category"></app-category>
+  </div>
+  
+  <div *ngIf="!categories || categories.length == 0">No hay categorías</div>
+</body>
