--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,12 @@
-<body>
-  <app-categories></app-categories>
-  <app-offers></app-offers>
-</body>
+<header>
+  <header>
+    <h1>Menu</h1>
+    <nav>
+      <a routerLink="/categories">Categorías</a>
+      <a routerLink="/offers">Ofertas</a>
+    </nav>
+  </header>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
