--- a/src/app/components/category/category.component.css
+++ b/src/app/components/category/category.component.css
@@ -1,8 +1,25 @@
-.category {
-  margin: 10px;
+.category-banner{
+  width: 50%;
+  margin: auto;
+  display: flex;
+  padding: 1em;
+  border-bottom: 2px;
+  border-bottom-style: solid;
+  border-bottom-color: #d0d0d0;
 }
+.category-banner h2{
+  margin: auto
+}
+
 .foods {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 10px;
+}
+
+.category{
+  margin: 2em;
+  border-bottom: 2px;
+  border-bottom-style: solid;
+  border-bottom-color: #d0d0d0;
 }
