--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,13 +1,10 @@
-<mat-card class="category">
+<div class="category">
   <!-- Title -->
-  <mat-card-header>
-    <mat-card-title-group>
-      <mat-card-title>
+    <div class="category-banner">
+      <h2>
         {{ category.name }}
-      </mat-card-title>
-      <button mat-icon-button><mat-icon>add</mat-icon></button>
-    </mat-card-title-group>
-  </mat-card-header>
+      </h2>
+    </div>
 
   <!-- Foods -->
   <mat-card-content class="foods">
@@ -21,4 +18,4 @@
       >
     </div>
   </mat-card-content>
-</mat-card>
+</div>
