--- a/src/app/components/food/food.component.css
+++ b/src/app/components/food/food.component.css
@@ -1,8 +1,20 @@
 .food {
-    width: 400px;
+  width: 300px;
+  padding: 10px;
+  margin: 2em
 }
 
-img {
-  height: 100px;
-  width: 200px;
+.food img {
+  height: 150px;
+  width: auto;
+}
+
+.info-container {
+  width: auto;
+  margin: 5px 0;
+  align-items: start;
+}
+
+.buttons, .info-container {
+  display: inline-block;
 }
