--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -1,18 +1,16 @@
 <!-- Food -->
 <mat-card class="food">
-    <mat-card-header>
-      <mat-card-title-group>
+  <!-- Picture -->
+  <img mat-card-image [src]="food.picture" />
+      <div class="info-container">
         <!-- Name, amount and price -->
         <mat-card-title>{{ food.name }}</mat-card-title>
         <mat-card-subtitle>Cantidad: {{ food.amount }}</mat-card-subtitle>
-        <mat-card-subtitle>Precio: {{ food.price }} $</mat-card-subtitle>
-        <!-- Picture -->
-        <img mat-card-image [src]="food.picture" />
-      </mat-card-title-group>
-    </mat-card-header>
+        <mat-card-subtitle>Precio: ${{ food.price }}</mat-card-subtitle>
+      </div>
     
     <!-- Buttons for edit and delete -->
-    <mat-card-actions align="end">
+    <mat-card-actions class="buttons">
       <button mat-icon-button><mat-icon>edit</mat-icon></button>
       <button mat-icon-button><mat-icon>delete</mat-icon></button>
     </mat-card-actions>
