--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -1,40 +1,19 @@
-main {
-  
-}
-
-header {
+.tool-bar {
+  width:100%;
   background-color: #b57c00;
   padding: 0.7em;
   margin-bottom: 0.5em;
-  display: grid;
-  grid-template-columns: auto max-content;
+  z-index: 100;
 }
 
-h1 {
+span {
   color: #fff;
-  display: inline;
-  margin: auto auto auto 0.3em;
+  margin: auto 5em auto 0.3em;
+}
+button {
+  margin-left: 1em;
 }
 
-nav {
-  display: inline;
-}
-
-nav a {
-  padding: 1rem;
-  text-decoration: none;
-  margin-left: 10px;
-  display: inline-block;
-  background-color: #f7d547;
-  color: #3d3d3d;
-  border-radius: 4px;
-}
-
-nav a:hover {
-  color: white;
-  background-color: #b57c00;
-}
-
-nav a:active {
-  background-color: #575700;
+.active {
+  background-color: rgba(255, 255, 255, 0.1);
 }
