--- a/src/app/components/foods/foods.component.html
+++ b/src/app/components/foods/foods.component.html
@@ -1,7 +1,21 @@
 <div class="category-banner">
-    <h2 *ngIf="category">
-      {{ category.name }}
-    </h2>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>expand_more</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu" >
+        <button mat-menu-item (click)="onSelect()">Todos</button>
+        <div *ngFor="let c of categories" (click)="onSelect(c)">
+        <button mat-menu-item>
+            <span>{{c.name}}</span>
+        </button>
+        </div>
+    </mat-menu>
+    <h2 *ngIf="category; else noCategory">
+        {{ category.name }}
+      </h2>
+      <ng-template #noCategory>
+        <h2>Todos los platos</h2>
+      </ng-template>
 </div>
 
 <div class="foods">
