--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="tool-bar">
+<mat-toolbar class="nav-bar">
     <span>Menu</span>
     <button mat-button [routerLink]="['/categories']" routerLinkActive="active">Inicio</button>
     <button mat-button [routerLink]="['/foods']" routerLinkActive="active">Platos</button>
