--- a/src/app/components/offer/offer.component.html
+++ b/src/app/components/offer/offer.component.html
@@ -20,7 +20,7 @@
       <span class="category-banner">{{ c.name }}</span>
       <mat-card-content>
         <!-- Foods -->
-        <mat-card *ngFor="let f of c.foods">
+        <mat-card *ngFor="let f of c.foods" class="foods">
           <mat-card-header>
             <mat-card-title-group>
               <mat-card-title>{{ f.name }}</mat-card-title>
