--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,10 +1,10 @@
 <div class="category">
   <!-- Title -->
-    <div class="category-banner">
+    <mat-toolbar class="category-banner">
       <h2>
         {{ category.name }}
       </h2>
-    </div>
+    </mat-toolbar>
 
   <!-- Foods -->
   <mat-card-content class="foods">
