--- a/src/app/components/foods/foods.component.css
+++ b/src/app/components/foods/foods.component.css
@@ -1,16 +1,18 @@
 .category-banner{
-    width: 50%;
-    margin: auto;
+    background-color: #FFEE58;
     display: flex;
-    padding: 1em;
-    border-bottom: 2px;
-    border-bottom-style: solid;
-    border-bottom-color: #d0d0d0;
+    position: fixed;
+    z-index: 5;
+    padding: 1em 10em;
 }
 
 .foods {
-    margin: 0 10em;
+    margin: 64px 10em;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 10px;
+}
+
+.spacer{
+    flex: auto;
 }
