--- a/src/app/components/offer/offer.component.css
+++ b/src/app/components/offer/offer.component.css
@@ -1,11 +1,17 @@
 .offer {
   max-width: 500px;
-  margin: 0 auto;
+  margin: 2em auto;
+  background-color: #FFF59D;
 }
 
 .offer-banner{
   display: flex;
   justify-content: space-between;
+  margin-bottom: 1em;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  background-color: #FBC02D;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
 }
 .offer-name{
   justify-content: start;
@@ -17,21 +23,19 @@ img {
   margin: 10px;
 }
 
-mat-card {
-  margin: 10px;
-  background-color: #F5F5F5;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+.foods {
+  background-color: #FFF59D;
+  box-shadow: none;
 }
 
 .category-banner{
   width: 50%;
-  margin: auto;
+  margin: 1em auto 0.2em;
   display: flex;
   justify-content: center;
   border-bottom: 2px;
   border-bottom-style: solid;
-  border-bottom-color: #d0d0d0;
+  border-bottom-color: #FBC02D;
 }
 
 .category {
