--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-body { font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin:0; background-color: #FFF9C4;font-family: Roboto, "Helvetica Neue", sans-serif; }
