--- a/src/app/components/category/category.component.css
+++ b/src/app/components/category/category.component.css
@@ -12,10 +12,13 @@
   margin: auto
 }
 
-.foods {
+.content {
   margin: 0 10em;
+}
+
+.foods {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   gap: 10px;
 }
 
