--- a/src/app/components/foods/foods.component.html
+++ b/src/app/components/foods/foods.component.html
@@ -23,11 +23,12 @@
 </mat-toolbar>
 
 <div class="foods">
+    <mat-spinner *ngIf="loading" [diameter]="34"></mat-spinner>
     <div *ngFor="let food of foods" align="center">
         <app-food [food]="food"></app-food>
       </div>
       <!-- If are not foods -->
-      <div *ngIf="!foods || foods.length == 0">
+      <div *ngIf="(!foods || foods.length == 0)  && !loading">
         <mat-card-title>No se encontraron comidas, presiona + para añadir</mat-card-title>
     </div>
 </div>
