--- a/src/app/components/categories/categories.component.css
+++ b/src/app/components/categories/categories.component.css
@@ -1,3 +1,14 @@
 .categories {
     margin: 0 auto;
 }
+
+.search-input{
+    position: fixed;
+    z-index: 15;
+    top: 0.2em;
+    right: 5em; 
+}
+
+.not-found{
+    margin: 64px 500px;
+}
