--- a/src/app/components/foods/foods.component.css
+++ b/src/app/components/foods/foods.component.css
@@ -16,3 +16,14 @@
 .spacer{
     flex: auto;
 }
+
+.search-input{
+    position: fixed;
+    z-index: 15;
+    top: 0.2em;
+    right: 5em; 
+}
+
+.not-found{
+    margin: 32px auto;
+}
