--- a/src/app/components/foods/foods.component.html
+++ b/src/app/components/foods/foods.component.html
@@ -1,3 +1,7 @@
+<mat-form-field class="search-input">
+    <mat-label><mat-icon>search</mat-icon></mat-label>
+    <input #searchInput matInput (input)="update()" />
+</mat-form-field>
 <mat-toolbar class="category-banner">
     <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>expand_more</mat-icon>
@@ -27,7 +31,6 @@
         <app-food [food]="food"></app-food>
       </div>
       <!-- If are not foods -->
-      <div *ngIf="!foods || foods.length == 0">
-        <mat-card-title>No se encontraron comidas, presiona + para añadir</mat-card-title>
-    </div>
+      <h2 class="not-found" *ngIf="!foods || foods.length == 0">No se encontraron comidas, presiona + para añadir</h2>
 </div>
+
