--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -6,7 +6,7 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
 }
 
-span {
+.title{
   font-size: 2em;
   color: #fff;
   margin: auto 2em auto 0.3em;
@@ -21,4 +21,8 @@ button {
 
 main{
   padding-top: 64px;
+}
+
+.divider{
+  flex:auto
 }
