--- a/src/app/components/offers/offers.component.html
+++ b/src/app/components/offers/offers.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="search-input">
-  <mat-label><mat-icon>search</mat-icon> Buscar en ofertas</mat-label>
+  <mat-label><mat-icon>search</mat-icon> Buscar </mat-label>
   <input #searchInput matInput (input)="update()" />
 </mat-form-field>
 <mat-toolbar class="offer-banner">
