--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -11,7 +11,7 @@
     
     <!-- Buttons for edit and delete -->
     <mat-card-actions class="buttons">
-      <app-action-buttons [food]="food" (updateEmitter)="update()"></app-action-buttons>
+      <app-action-buttons [target]="food" [isOffer]="false" (updateEmitter)="update()"></app-action-buttons>
     </mat-card-actions>
   </mat-card>
   
