--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="nav-bar">
-    <span class="title">Menu</span>
+    <span class="title">Menú</span>
     <button mat-button [routerLink]="['/categories']" routerLinkActive="active">Inicio</button>
     <button mat-button [routerLink]="['/foods']" routerLinkActive="active">Platos</button>
     <button mat-button [routerLink]="['/offers']" routerLinkActive="active">Ofertas</button>
