--- a/src/app/components/offer/offer.component.css
+++ b/src/app/components/offer/offer.component.css
@@ -11,7 +11,7 @@
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   background-color: #FBC02D;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+  box-shadow: 0 2px 5px #00000042;
 }
 .offer-name{
   justify-content: start;
