--- a/src/app/components/modal-edit-create-food/modal-edit-create-food.component.html
+++ b/src/app/components/modal-edit-create-food/modal-edit-create-food.component.html
@@ -38,7 +38,7 @@
 
     <div mat-dialog-action>
         <button mat-icon-button (click)="onClickAcept()"><mat-icon>edit</mat-icon></button>
-        <button mat-icon-button (click)="onClickNo()"><mat-icon>delete</mat-icon></button>
+        <button mat-icon-button (click)="onClickNo()"><mat-icon>cancel</mat-icon></button>
     </div>
 </div>
 
