Fix a bug in offer modal

--- a/src/app/components/modal-edit-create-offer/modal-edit-create-offer.component.html
+++ b/src/app/components/modal-edit-create-offer/modal-edit-create-offer.component.html
@@ -27,7 +27,7 @@
     
      <!--add category-->
     <div class="add-category"> 
-        <p> Agregar </p>
+        <p> Agregar categoría</p>
         <button mat-icon-button (click)="addCategory()"> 
             <mat-icon>add</mat-icon>
         </button> 
