--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -3,7 +3,7 @@
     margin: 2rem 3rem 0;
     padding: 0;
   }
-  .custom-form {
+  .login {
     min-height: 300px;
     min-width: 300px;
     max-width: 40%;
@@ -33,5 +33,8 @@
     width: 50%;
     display: block;
     border-radius: 1rem;
-    cursor: pointer;
+  }
+
+  input:focus {
+    outline: none;
   }
