--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -28,8 +28,19 @@ main{
 }
 
 .user-nav{
+  width: 40px;
+  height: 40px;
   position: fixed;
   z-index: 15;
-  top: 1em;
-  right: 1em; 
+  right: 1.5em; 
+  cursor: pointer;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-nav mat-icon{
+  display: block;
+  border-radius: 50%;
 }
