--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -5,7 +5,7 @@
       <button mat-button [routerLink]="['/foods']" routerLinkActive="active">Platos</button>
       <button mat-button [routerLink]="['/offers']" routerLinkActive="active">Ofertas</button>
     </div>
-    <buttom class="user-nav" mat-icon-button [routerLink]="['/login']" routerLinkActive="active"><mat-icon>person</mat-icon></buttom>
+    <buttom mat-icon-button class="user-nav" [routerLink]="['/login']" routerLinkActive="active"><mat-icon>account_circle</mat-icon></buttom>
 </mat-toolbar>
 <main>
   <router-outlet></router-outlet>
