--- a/src/app/components/modal-edit-create-order/modal-edit-create-order.component.html
+++ b/src/app/components/modal-edit-create-order/modal-edit-create-order.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-title class="offer-header"> 
+<div mat-dialog-title class="order-header"> 
     <p>
         {{headerTitle}} 
     </p>
@@ -11,7 +11,7 @@
 
 </div>
 
-<div mat-dialog-content class="offer">  
+<div mat-dialog-content class="order">  
 
     <div class="name-price-content">
         <mat-form-field class="name">
