--- a/src/app/components/modal-edit-create-order/modal-edit-create-order.component.css
+++ b/src/app/components/modal-edit-create-order/modal-edit-create-order.component.css
@@ -3,7 +3,7 @@
     overflow: hidden;
 }
 
-.offer-header{
+.order-header{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -33,7 +33,7 @@
     justify-content: center;
 }
 
-.offer{
+.order{
     background-color: #FFF59D;
 }
 
